Fix for the mobile version of the carousel: It was not centered correctly.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -27,6 +27,13 @@
 	margin: 0;
 	padding: 0;
     }
+    .carousel-caption{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -100px;
+	margin-left: 0px;
+    }
 }
 /*mobile*/
 @media (max-width: 768px) {
@@ -44,7 +51,7 @@
 .full-width img{
     width: 100%;
 }
-.carousel-caption{
+.carousel-caption2{
     position: fixed;
     top: 50%;
     left: 50%;
